<resources>
    <!-- REGISTRAR ACTIVITY-->
    <string name="app_name">Send Meal</string>
    <string name="hint_user_name">Nombre y Apellido</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_repetirPassword">Repetir Contraseña</string>
    <string name="hint_email">Email</string>
    <string name="label_tipoTarjeta">Tipo de tarjeta</string>
    <string name="label_debito">Debito</string>
    <string name="label_credito">Crédito</string>
    <string name="hint_NumeroTarjeta">Numero de Tarjeta</string>
    <string name="hint_CCV_Tarjeta">CCV</string>
    <string name="label_fechaVto">Fecha de vencimiento</string>
    <string name="hint_CBU">CBU</string>
    <string name="hint_alias_CBU">Alias CBU</string>
    <string name="switch_carga_inicial">Realizar carga inicial?</string>
    <string name="checkBox_Terminos">Acepto los terminos y condiciones</string>
    <string name="btn_Registrar">REGISTRAR</string>
    <string name="txtCreditoInicial">Credito inicial:</string>
    <string name="hint_fechaVtoMes">Mes</string>
    <string name="hint_fechaVtoAnio">Anio</string>
    <string name="btnVolver">Volver</string>

    <!-- HOME ACTIVITY-->
    <string name="mensajeBienvenida">\nBienvenido!</string>
    <string name="tvUsuarios">Gestion de Usuarios:</string>
    <string name="tvPlatos">\nGestion de Platos:</string>

    <string name="btnRegistrarme">Registrarme</string>
    <string name="btnCargarUsuariosDePrueba">Cargar Usuarios de prueba</string>
    <string name="btnListaUsuarios">Lista Usuarios</string>

    <string name="btnCrearItem">Crear Item</string>
    <string name="btnCargarPlatosDePrueba">Cargar Platos de prueba</string>
    <string name="btnListaItems">Lista Items</string>


    <!-- CREAR ITEM ACTIVITY-->
    <string name="tituloActivity">Nuevo Plato</string>
    <string name="hint_tituloPlato">Título</string>
    <string name="hintDescripcion">Descripción</string>
    <string name="hintPrecio">Precio</string>
    <string name="hintCalorías">Calorías</string>
    <string name="btnGuardar">Guardar</string>

    <!--
    <string name=""></string>
    -->


</resources>