<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />
    -->

    <EditText
        android:id="@+id/editTextTextNombreApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_user_name"

        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/editTextRepetirPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hint_repetirPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewTipoTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_tipoTarjeta" />

    <RadioGroup
        android:id="@+id/radioGroupTipoTarjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonDebito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_debito" />

        <RadioButton
            android:id="@+id/radioButtonCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_credito" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNumeroTarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_NumeroTarjeta"
            android:inputType="number"
            android:importantForAutofill="no"
            android:maxLength="3" />

        <EditText
            android:id="@+id/editTextCCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_CCV_Tarjeta"
            android:inputType="number"
            android:maxLength="3"
            android:importantForAutofill="no" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewFechaVencimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_fechaVto" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerMesVencimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerAnioVencimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextCBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_CBU"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextAliasCBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_alias_CBU"
        android:importantForAutofill="no" />

    <Switch
        android:id="@+id/switchCargaInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_carga_inicial" />



    <TextView
        android:id="@+id/textViewCreditoInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtCreditoInicial" />

    <SeekBar
        android:id="@+id/seekBarCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/checkBoxTerminosYCondiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_Terminos" />

    <Button
        android:id="@+id/buttonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Registrar" />


</LinearLayout>